text align fixed

--- a/styles/place.css
+++ b/styles/place.css
@@ -54,7 +54,7 @@ header h1 {
     background-color: #0b7d3b;
     color: white;
     padding: .5rem;
-    margin: 1rem 
+    margin: 1rem; 
     text-align: center;
 }
 
